# Projet_C

./: .gitignore  CMakeLists.txt  README.md  main.c  survivor_colony.db
cmake_modules/: FindSDL2_mixer.cmake  FindSDL_ttf.cmake  FindSQLite3.cmake
include/: Log.h  audio.h  breakMenu.h  buildMenu.h  character.h  colision.h  config.h  database.h  game.h  include.h  logo.h  map.h  playerControlleur.h  ressources.h  save.h  screen.h  survivor.h  text_input.h  trailer.h  ui.h
src/: Log.c  audio.c  buildMenu.c  character.c  character.h  colision.c  config.c  database.c  game.c  game.h  include.h  logo.c  main.c  map.c  playerControlleur.c  ressources.c  save.c  screen.c  survivor.c  text_input.c  trailer.c  ui.c  ui.h
